--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js && knex migrate:latest",
+    "start": "node server.js",
     "dev": "node --watch server.js",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
