--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
           cd ${{ secrets.BOOKTALE_DEPLOY_PATH }}
           git pull origin main
           npm install
-          pm2 reload all || pm2 start server.js --name "adam-debrouwere-capstone-booktale-server"
+          pm2 reload all || pm2 start src/server.js --name "adam-debrouwere-capstone-booktale-server"
         EOF
